static/style.css
html,body {
  margin:0;
  padding:0;
  height:100%;
  padding-bottom: 40px;
}
button, input[type="submit"]{
  background: #D7A786;
  box-shadow: 5px 2px 10px 2px rgba(0, 0, 0, 0.4);
  border-radius: 30px;
}
#nav-title {

  font-family: Roboto Slab;
  font-style: normal;
  font-weight: bold;
  font-size: 20px;
  line-height: 41px;

  color: #FFFFFF;
}

.nav-row{
  background: #2B2E4D;
  box-shadow: 0px 3px 20px 3px rgba(0, 0, 0, 0.5);
}

  #nav-logo
{
    width: 40px;
    height: 40px;
}

.events-list {
  display: block;
  height : 200px;
  overflow-y : scroll;
}

a .title{
    font-size: 25px;
    color: #FFFFFF;
}

a.active h3{
  text-shadow: 2px 2px #D7A786;
  font-size: 30px;
}

a.active{
  background: #2B2E4D !important;
}
body{
  min-height: 100vh;
}
#cover-image {
  background: url('images/welcome.jpg') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}

.alert {
  border-radius: 0px;
}




.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 1;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}








/*
 * Cover page
 */
 h1.cover-heading {
  font-size: 4rem;
}

p.cover-text {
  font-size: 1.7rem;
}

.cover-card {
  background-color: rgba(245, 245, 245, 0.6);
  max-width: 30rem;
  padding-top: 30px;
  padding-left: 50px;
  padding-right: 50px;
  padding-bottom: 30px;
  border-radius: 15%;
}
.cover-card-block {
  opacity: 1
}

#sidebar {
  position: absolute;
}

#membersListDiv {
  background-color: #FFFFFF;
  z-index: 3;
}

#sidebar button {
  position: absolute;
  left: -50px;
  text-align: left;
  border-radius: 0 5px 5px 0;
  width: 190px;
  height: 50px;
  z-index: 0;
  transition: 0.4s;
}

#members {
  top: 50px;
}

#applications {
  top: 100px;
}

#roles {
  top: 150px;
}

#sidebar button:hover {
  left: -180px;
}

#mySidebar {
  height: 100%;
  width: 8%;
  z-index: 1;
  top: 0;
  left: 0;
  background: #D7A786;
  transition: 0.5s;
  overflow-x: hidden;
  padding-top: 60px;
  white-space: nowrap;
}

#sidebar div {
  position: absolute; /* Position them relative to the browser window */
  left: -80px; /* Position them outside of the screen */
  transition: 0.3s; /* Add transition on hover */
  padding: 15px; /* 15px padding */
  width: 100px; /* Set a specific width */
  z-index: 0;
  text-decoration: none; /* Remove underline */
  font-size: 20px; /* Increase font size */
  color: rgb(185, 18, 163); /* White text color */
  border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
}

#sidebar div:hover {
  left: 0; /* On mouse-over, make the elements appear as they should */
}

#mySidebar a {
  padding: 4px 4px 4px 20px;
  text-decoration: none;
  font-size: 25px;
  color: #f1f1f1 ;
  display: block;
  cursor: pointer;
}

main .sidebar{
  position: absolute;
  top: 0;
  right: 20px;
  font-size: 36px;
  margin-left: 20px;
}

.material-icons,
.icon-text {
  vertical-align: middle;
  cursor: pointer;
}

.material-icons {
  margin-right: 40px
}

.club_title_cover{
  background-image: url('https://images.indianexpress.com/2020/05/chess-fb.jpg');
  background-size:     cover;
  background-repeat:   no-repeat;
  background-position: center center;
}

/*  this code is provided by https://bootstrapmade.com/selecao-bootstrap-template/, licensed by */
  /* <!-- ======================================================= */
  /* * Template Name: Selecao - v4.7.0 */
  /* * Template URL: https://bootstrapmade.com/selecao-bootstrap-template/ */
  /* * Author: BootstrapMade.com */
  /* * License: https://bootstrapmade.com/license/ */
  /* ======================================================== --> */


/*--------------------------------------------------------------
# Hero Section
--------------------------------------------------------------*/
#hero {
  width: 100%;
  overflow: hidden;
  position: relative;
  background: linear-gradient(0deg, #2B2E4D 0%, #33364a 100%);
  padding: 0;
}
#hero .carousel-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  position: relative;
  height: 44vh;
  padding-top: 60px;
}
#hero h2 {
  color: #fff;
  margin-bottom: 30px;
  font-size: 48px;
  font-weight: 700;
}
#hero p {
  width: 80%;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
  margin: 0 auto 30px auto;
  color: #fff;
}
#hero .carousel-control-prev, #hero .carousel-control-next {
  width: 10%;
}
#hero .carousel-control-next-icon, #hero .carousel-control-prev-icon {
  background: none;
  font-size: 48px;
  line-height: 1;
  width: auto;
  height: auto;
}
#hero .btn-get-started {
  font-family: "Raleway", sans-serif;
  font-weight: 500;
  font-size: 14px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 12px 32px;
  border-radius: 50px;
  transition: 0.5s;
  line-height: 1;
  margin: 10px;
  color: #fff;
  -webkit-animation-delay: 0.8s;
  animation-delay: 0.8s;
  border: 2px solid #D7A786;
}
#hero .btn-get-started:hover {
  background: #ef6603;
  color: #fff;
  text-decoration: none;
}
@media (min-width: 1024px) {
  #hero p {
    width: 60%;
  }
  #hero .carousel-control-prev, #hero .carousel-control-next {
    width: 5%;
  }
}
@media (max-width: 768px) {
  #hero .carousel-container {
    height: 90vh;
  }
  #hero h2 {
    font-size: 28px;
  }
}

.hero-waves {
  display: block;
  width: 100%;
  height: 60px;
  position: relative;
}

.wave1 use {
  -webkit-animation: move-forever1 10s linear infinite;
  animation: move-forever1 10s linear infinite;
  -webkit-animation-delay: -2s;
  animation-delay: -2s;
}

.wave2 use {
  -webkit-animation: move-forever2 8s linear infinite;
  animation: move-forever2 8s linear infinite;
  -webkit-animation-delay: -2s;
  animation-delay: -2s;
}

.wave3 use {
  -webkit-animation: move-forever3 6s linear infinite;
  animation: move-forever3 6s linear infinite;
  -webkit-animation-delay: -2s;
  animation-delay: -2s;
}

@-webkit-keyframes move-forever1 {
  0% {
    transform: translate(85px, 0%);
  }
  100% {
    transform: translate(-90px, 0%);
  }
}

@keyframes move-forever1 {
  0% {
    transform: translate(85px, 0%);
  }
  100% {
    transform: translate(-90px, 0%);
  }
}
@-webkit-keyframes move-forever2 {
  0% {
    transform: translate(-90px, 0%);
  }
  100% {
    transform: translate(85px, 0%);
  }
}
@keyframes move-forever2 {
  0% {
    transform: translate(-90px, 0%);
  }
  100% {
    transform: translate(85px, 0%);
  }
}
@-webkit-keyframes move-forever3 {
  0% {
    transform: translate(-90px, 0%);
  }
  100% {
    transform: translate(85px, 0%);
  }
}
@keyframes move-forever3 {
  0% {
    transform: translate(-90px, 0%);
  }
  100% {
    transform: translate(85px, 0%);
  }
}

/* Info Cards */
 .info-card {
  padding-bottom: 10px;
}
 .info-card h6 {
  font-size: 28px;
  font-weight: 700;
  margin: 0;
  padding: 0;
}
 .card-icon {
  font-size: 32px;
  line-height: 0;
  width: 64px;
  height: 64px;
  flex-shrink: 0;
  flex-grow: 0;
}
 .members-card .card-icon {
  color: #D7A786;
  background: #ffecdf;
}
/*--------------------------------------------------------------
# Owner info on show club
--------------------------------------------------------------*/
.cta {
  background: linear-gradient(0deg, #2B2E4D 0%, #33364a 100%);
  padding: 80px 0;
}
.cta-description {
  background:  #ffffff;
  padding: 80px 0;
}
.cta-description-2 {
  background:  #ffffff;
  padding: 80px 0;
}


.cta h3 {
  color: #fff;
  font-size: 28px;
  font-weight: 700;
}
.cta p {
  width: 80%;
  margin: 0 auto 30px auto;
  color: #fff;}


@media (max-width: 1024px) {
  .cta {
    background-attachment: scroll;
  }
}

/*
 * Welcome page
 */
h1.cover-heading {
  font-size: 3rem;
}

p.cover-text {
  font-size: 1rem;
}

.cover-card {
  background-color: rgba(245, 245, 245, 0.6);
  max-width: 30rem;
  padding-top: 30px;
  padding-left: 50px;
  padding-right: 50px;
  padding-bottom: 30px;
  border-radius: 15%;
}
.cover-card-block {
  opacity: 1
}

#footer {
  position: fixed;
  padding: 10px 10px 0px 10px;
  bottom: 0;
  width: 100%;
  height: 40px;
  background: grey;
}

